deployment/k8s/server/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dhruva-server
  namespace: default
spec:
  selector:
    matchLabels:
      app: dhruva-server
  template:
    metadata:
      labels:
        app: dhruva-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: dhruva-server
          image: dhruvatestcr.azurecr.io/dhruvaserver:latest

          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "1000m"
            requests:
              cpu: "800m"

          imagePullPolicy: Always

          command:
            - "uvicorn"
            - "main:app"
            - "--workers"
            - "$(BACKEND_WORKERS)"
            - "--port"
            - "$(BACKEND_PORT)"
            - "--host"
            - "0.0.0.0"
            - "--proxy-headers"

      volumes:
        - name: app-data

        - name: config
          configMap:
            name: dhruva-configmap
