deployment/k8s/server/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dhruva-server
spec:
  selector:
    app: dhruva-server
  ports:
    - port: 80
      targetPort: 8000
  type: LoadBalancer
