deployment/k8s/server/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dhruva-server
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: dhruva-server
                port:
                  number: 80
            pathType: Exact
